# pistepilot

./: .gitignore  LICENSE  README.md  build_exe.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  setup_dist_bins.ps1
.github/workflows/: tests.yml
config/: profiles.example.json
pistepilot/: __init__.py  analyzer.py  cli.py  ffmpeg_tools.py  grouping.py  gui.py  i18n.py  logger.py  mkv_editor.py  models.py  profiles.py  scanner.py  selector.py  services.py  ui.py
tests/: test_selector.py
